--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@tailwindcss/postcss7-compat": "^2.0.2",
+        "autoprefixer": "^9.8.6",
         "axios": "^0.19",
         "bootstrap": "^4.5.2",
         "cross-env": "^7.0",
@@ -21,9 +23,11 @@
         "moment": "^2.29.0",
         "nprogress": "^0.2.0",
         "popper.js": "^1.16.1",
+        "postcss": "^7.0.35",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.26.11",
         "sass-loader": "^10.0.0",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
         "vue": "^2.6.11",
         "vue-infinite-loading": "^2.4.5",
         "vue-meta": "^2.4.0",
